# gpuinfo

./: .gitignore  404.html  README.md  example.py  index.html  mkdocs.yml  pyproject.toml
api_reference/: index.html
docs/: api_reference.md  index.md  usage.md
gpuinfo/: gpu_info.py  gpu_stat.py
gpuinfonv/: __init__.py
search/: search_index.json
usage/: index.html
